[gd_scene load_steps=7 format=3 uid="uid://ck718meym8xx3"]

[ext_resource type="Texture2D" uid="uid://ckhve70sn8xqn" path="res://Assets/Sprites/Background/Clouds/Clouds 3/1.png" id="1_00e0p"]
[ext_resource type="Script" uid="uid://ccr4twfr0lsj6" path="res://Scripts/start_menu.gd" id="1_jbod3"]
[ext_resource type="Texture2D" uid="uid://dhmljcbnbh4xf" path="res://Assets/Sprites/Background/Clouds/Clouds 3/3.png" id="2_xcop4"]
[ext_resource type="Texture2D" uid="uid://dvergsij0vrm0" path="res://Assets/Sprites/Background/Clouds/Clouds 3/4.png" id="3_2rjp5"]
[ext_resource type="FontFile" uid="uid://doo2djw4si86l" path="res://Text/Pixel Game.otf" id="5_osx4t"]
[ext_resource type="Script" uid="uid://ccb66rqkgn805" path="res://Scripts/grab_focus.gd" id="6_k7472"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jbod3")

[node name="Background" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_00e0p")

[node name="TextureRect3" type="TextureRect" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_xcop4")

[node name="TextureRect2" type="TextureRect" parent="Background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_2rjp5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 180

[node name="Divider" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
z_index = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 100
text = "Out of Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 1

[node name="Divider2" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Divider3" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Divider4" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Divider5" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Divider6" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Divider7" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 35
text = "play"
script = ExtResource("6_k7472")

[node name="arcade" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 35
text = "arcade
"

[node name="shop" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 35
text = "Shop"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 35
text = "Options"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_osx4t")
theme_override_font_sizes/font_size = 35
text = "Quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/quit" to="." method="_on_quit_pressed"]
